src/EnvoyJwt/Envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/api/w"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: /Weather
                  cluster: weather_service
              - match:
                  prefix: "/api/c"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: /City
                  cluster: city_service
          http_filters:
           - name: envoy.filters.http.jwt_authn
             typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                providers:
                  jwt_provider:
                    issuer: "https://blog.yuanpei.me"
                    audiences:
                      - "api"
                    forward: true
                    local_jwks:
                      filename: "/etc/envoy/certs/jwks.json"
                    # remote_jwks:
                    #   http_uri:
                    #     uri: "https://fgms-idsrv.fgms.dev.com:5095/.well-known/openid-configuration/jwks"
                    #     cluster: auth_app
                    #     timeout: 5s
                rules:
                  - match:
                      prefix: "/api/w"
                    requires:
                      provider_name: jwt_provider
                  - match:
                      prefix: "/api/c"
                    requires:
                      provider_name: jwt_provider
           - name: envoy.filters.http.router

  clusters:
  # City Service
  - name: city_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: city_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: city_service
                port_value: 80
 # Weather Service
  - name: weather_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: weather_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: weather_service
                port_value: 80

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9091 }
